redis_part_completed_project_finished
